[SG-1922] -- Color Contrast Issues with keyboard focus indicators (#1521)
* [SG-1922] -- Color Contrast Issues with keyboard focus indicators

SG-1922

Homepage spotlight button, "Part of" department snippet on meetings, Page not found content links adjusted to have better color contrast on the indicator

* [SG-1922] -- more color contrast fixes. 404 search button focus, resource collection about section, and "Part of" section for more content types

* [SG-1922] -- more banner focus link color fixes

* [SG-1922] -- Setup meeting headers to have white border focus, and form submit inputs to have dark focus borders.

--- a/web/themes/custom/sfgovpl/src/sass/forms/_form-fields.scss
+++ b/web/themes/custom/sfgovpl/src/sass/forms/_form-fields.scss
@@ -56,6 +56,10 @@ button,
 input[type='submit'] {
   -webkit-appearance: none;
   -moz-appearance: none;
+
+  &:focus {
+    @include focus-outline;
+  }
 }
 
 input[type='date'],
