--- a/web/themes/custom/sfgovpl/src/sass/page/_page-404.scss
+++ b/web/themes/custom/sfgovpl/src/sass/page/_page-404.scss
@@ -61,12 +61,20 @@
     width: 100%;
     padding: 0;
     margin: 0;
-    form {
+    form.sfgov-search-form {
       label {
         display: none;
       }
       input {
         box-shadow: none;
+        &:focus {
+          outline-color: $c-white;
+        }
+      }
+      .form-actions.btn {
+        &:focus {
+          outline-color: $c-white;
+        }
       }
       @include media($narrow-screen) {
         margin-bottom: 0;
